# openCR-Imu

./: CMakeLists.txt  README.md  package.xml  readme.md
launch/: imu_driver.launch
src/: imuCalib.cpp  imu_toEuler.cpp
