<?xml version="1.0"?>
<package format="2">
  <name>opencrImu</name>
  <version>1.2.3</version>
  <description>
    openCR IMU
  </description>
  <license>Apache 2.0</license>
  <author>gawnjun shin</author>
  <maintainer email="shinkansan@dgist.ac.kr">gawnjun shin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
</package>
